# sigaa-cli

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: get-account-info.js
src/: sigaa-main.ts
src/account/: sigaa-account-factory.ts  sigaa-account-ufba.ts
src/session/: sigaa-http.ts  sigaa-institution-controller.ts
src/session/login/: sigaa-login-ufba.ts
src/session/page/: sigaa-page-ufba.ts
src/sigaa_api/: __init__.py  __main__.py  bonds.py  browser.py  core.py  login.py  session.py  sigaa.py  types.py
src/sigaa_api/accounts/: ufba.py
src/sigaa_api/activities/: models.py
src/sigaa_api/courses/: models.py  navigator.py
src/sigaa_api/models/: account.py  active_course.py  course.py  entities.py  program.py  section.py  student.py  utils.py
src/sigaa_api/providers/: provider.py
src/sigaa_api/providers/ufba/: provider.py
src/sigaa_api/providers/ufba/utils/: active_courses.py  database.py  detail_program.py  detail_section.py  table_html.py
src/sigaa_api/search/: teacher.py
src/sigaa_api/utils/: cache.py  compiler.py  config.py  database.py  dicts.py  list.py  parser.py
src/sigaa_cli/: __main__.py  browser.py  parser.py  session.py  sigaa.py
src/sigaa_cli/models/: account.py  course.py  program.py  section.py
src/sigaa_cli/providers/: provider.py
src/sigaa_cli/providers/ufba/: provider.py
src/sigaa_cli/providers/ufba/utils/: active_courses.py  detail_program.py  detail_section.py  elements.py  table_html.py
src/sigaa_cli/resources/: file.py
src/sigaa_cli/utils/: cache.py  config.py  database.py  host.py  text.py  time.py
