[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigaa-api"
version = "0.1.0"
description = "SIGAA API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []                  # adicione libs aqui se quiser (ex.: "typer>=0.12,<0.13")
authors = [{ name = "Matheus Freitas", email = "msformigteen@live.com" }]

[project.scripts]
sigaa-api = "sigaa_api.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sigaa_api"]

