[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigaa-api"
version = "0.1.0"
description = "SIGAA API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13",
    "playwright>=1.41",
    "click>=8.1",
    "rich>=13.7",
    "rich-click>=1.8",
    "tinydb>=4.8,<5",
]
authors = [{ name = "Matheus Freitas", email = "msformigteen@live.com" }]

[project.scripts]
sigaa-api = "sigaa_api.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sigaa_api"]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "types-requests",
  "poethepoet>=0.24",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["rich", "rich.*", "rich_click", "rich_click.*"]
ignore_missing_imports = true

[tool.poe.tasks]
# Type checking with mypy
typecheck = "mypy src/sigaa_api"
# Alias
mypy = "poe typecheck"
